<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color6"
    tools:context=".ui.fragments.SignInFragment">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="145dp"
        android:layout_height="141dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/borani_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/noto_sans_bold"
        android:gravity="center"
        android:text="@string/textViewLogin1"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

    <TextView
        android:id="@+id/textviewLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/eb_garamond"
        android:gravity="center"
        android:text="@string/textviewLogin2"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLogin1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/cardview_dark_background"
        app:boxBackgroundColor="@color/material_dynamic_neutral90"
        app:hintTextColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewLogin2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:hint="E-mail"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLogin2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/cardview_dark_background"
        app:boxBackgroundColor="@color/material_dynamic_neutral90"
        app:hintTextColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogin1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/checkBoxLogin"
        android:textColor="@color/color2"
        android:textColorHighlight="@color/color2"
        android:textColorLink="@color/color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogin2" />

    <TextView
        android:id="@+id/textViewLogin4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/eb_garamond"
        android:text="@string/textViewLogin4"
        android:textColor="@color/color2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@+id/checkBoxLogin"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogin2" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="323dp"
        android:layout_height="54dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/round_btn"
        android:text="@string/buttonLogin"
        android:textColor="@color/color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxLogin" />

    <TextView
        android:id="@+id/textViewLogin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kanit_medium"
        android:text="@string/textViewLogin3"
        android:textColor="@color/color2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textViewLogin5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/righteous"
        android:text="@string/textViewLogin5"
        android:textColor="@color/color2"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewLogin3"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>