<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color6"
    tools:context=".ui.fragments.SignUpFragment">

    <ImageView
        android:id="@+id/imageViewSign"
        android:layout_width="145dp"
        android:layout_height="141dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/borani_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSign1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/noto_sans_bold"
        android:gravity="center"
        android:text="@string/textViewSign1"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSign" />

    <TextView
        android:id="@+id/textViewSign2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/eb_garamond"
        android:gravity="center"
        android:text="@string/textViewSign2"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSign1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputSign1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/cardview_dark_background"
        app:boxBackgroundColor="@color/material_dynamic_neutral90"
        app:hintTextColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSign2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:hint="Full Name"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputSign2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/cardview_dark_background"
        app:boxBackgroundColor="@color/material_dynamic_neutral90"
        app:hintTextColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputSign1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:hint="E-mail"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputSign3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/cardview_dark_background"
        app:boxBackgroundColor="@color/material_dynamic_neutral90"
        app:hintTextColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputSign2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/CheckBoxSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/CheckBoxSign"
        android:textColor="@color/color2"
        android:textColorHighlight="@color/color2"
        android:textColorLink="@color/color2"
        app:layout_constraintBottom_toTopOf="@+id/buttonSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="340dp"
        android:layout_height="59dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonSign"
        android:textColor="@color/color4"
        android:background="@drawable/round_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>